--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -2,36 +2,12 @@
 <html lang="fr">
 
 <head>
-    <!-- OpenReplay Tracking Code for nair0lf32.github.io -->
-    <script>
-        var initOpts = {
-            projectKey: "6442744483684795",
-            defaultInputMode: 0,
-            obscureTextNumbers: false,
-            obscureTextEmails: true,
-        };
-        var startOpts = { userID: "" };
-        (function (A, s, a, y, e, r) {
-            r = window.OpenReplay = [e, r, y, [s - 1, e]];
-            s = document.createElement('script'); s.src = A; s.async = !a;
-            document.getElementsByTagName('head')[0].appendChild(s);
-            r.start = function (v) { r.push([0]) };
-            r.stop = function (v) { r.push([1]) };
-            r.setUserID = function (id) { r.push([2, id]) };
-            r.setUserAnonymousID = function (id) { r.push([3, id]) };
-            r.setMetadata = function (k, v) { r.push([4, k, v]) };
-            r.event = function (k, p, i) { r.push([5, k, p, i]) };
-            r.issue = function (k, p) { r.push([6, k, p]) };
-            r.isActive = function () { return false };
-            r.getSessionToken = function () { };
-        })("//static.openreplay.com/latest/openreplay.js", 1, 0, initOpts, startOpts);
-    </script>
     <!--Meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Personal github page of EDEMESSI 'nairolf32' Florian" />
     <meta name="author" content="EDEMESSI Florian" />
-    <meta name="keywords" content="EDEMESSI,Florian,nairolf32,nair0lf32,github-page,personnal">
+    <meta name="keywords" content="EDEMESSI, Florian, nairolf32, nair0lf32, edemessi florian">
     <title>EDEMESSI Florian nair0lf32</title>
     <!-- Open Graph -->
     <meta property="og:title" content="EDEMESSI Florian nair0lf32" />
@@ -48,7 +24,7 @@
     <meta name="twitter:description" property="og:description" itemprop="description"
         content="Personal github page of EDEMESSI 'nairolf32' Florian">
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <!-- JQuery My boy :) -->
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -71,19 +47,9 @@
         type="text/css" />
     <link defer href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link defer href="css/styles.css" rel="stylesheet" />
-    <link defer href="css/animations.css" rel="stylesheet" />
-    <script defer src="js/scripts.js"></script>
-    <!-- Metype.com scripts -->
-    <script defer type='text/javascript'>
-        window.talktype = window.talktype || function (f) {
-            if (talktype.loaded)
-                f();
-            else
-                (talktype.q = talktype.q || []).push(arguments);
-        };
-    </script>
-    <script defer src='https://www.metype.com/quintype-metype/assets/metype.js'></script>
+    <link defer href="/css/styles.css" rel="stylesheet" />
+    <link defer href="/css/animations.css" rel="stylesheet" />
+    <script defer src="/js/scripts.js"></script>
 </head>
 
 
@@ -107,14 +73,12 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="/lol-fanzone.html">Lol fanzone</a>
+                            href="/pages/lol-fanzone.html">Lol fanzone</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
-
 
     <!-- Masthead-->
     <header class="masthead bg-primary text-white text-center">
@@ -127,7 +91,7 @@
                 <div class="divider-custom-icon"><i class="las la-star la-2x"></i></div>
                 <div class="divider-custom-line"></div>
             </div>
-            <p class="lead text-white text-center mb-0">
+            <p class="lead text-white text-center ms-auto">
                 Je me suis dit que vu que c'est mon site personnel, je peux bien parler un peu plus
                 de moi ici, notamment les trucs que j'aime bien. En gros cette page est dédiée à mes trucs
                 favoris. Comme j'aime bien lister et rassembler des trucs, vous allez peut-être trouver
@@ -152,28 +116,37 @@
                 <div class="divider-custom-line"></div>
             </div>
             <div>
-                <p class="lead text-white text-center mb-0">
+                <p class="lead text-white text-center ms-auto">
                     Il n'y a pas vraiment de langage ou d'outil meilleur qu'un autre, vu que chacun sert à
                     un but précis. J'ai utilisé pas mal de langages et outils (sans vraiment les maitriser totalement,
                     mais actuellement je cherche à me concentrer dans un domaine précis). Je me suis interressé à la
-                    programmation avec des potes du collège et On avait pour objectif de faire un jeu vidéo (mdr). On a vite compris
-                    que c'était pas simple. Ce qui explique que mon tout premier langage fut le <a href="https://fr.wikipedia.org/wiki/C%2B%2B">C++</a>. 
-                    J'ai immédiatement basculé vers <a href="https://www.java.com/fr/download/">Java</a> puis <a href="https://www.python.org/">Python</a> qui on peut
+                    programmation avec des potes du collège et On avait pour objectif de faire un jeu vidéo (mdr). On a
+                    vite compris
+                    que c'était pas simple. Ce qui explique que mon tout premier langage fut le <a
+                        href="https://fr.wikipedia.org/wiki/C%2B%2B">C++</a>.
+                    J'ai immédiatement basculé vers <a href="https://www.java.com/fr/download/">Java</a> puis <a
+                        href="https://www.python.org/">Python</a> qui on peut
                     dire reste un de mes favoris. Il est simple mais polyvalent, surtout si on se soucie peu de la
                     performance. Pour le web le <a href="https://developer.mozilla.org/fr/docs/Web/HTML">HTML</a>,
-                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_CSS">CSS</a>, <a href="https://developer.mozilla.org/fr/docs/Web/JavaScript">JavaScript</a> fut un
+                    <a href="https://fr.wikipedia.org/wiki/Langage_de_programmation_CSS">CSS</a>, <a
+                        href="https://developer.mozilla.org/fr/docs/Web/JavaScript">JavaScript</a> fut un
                     trio incontournable. Puis j'ai testé le backend web avec <a href="https://www.php.net/">PHP</a> et
-                    Enfin, je suis retourné au mobile natif avec java qui se fait progressivement "remplacer" par <a href="https://kotlinlang.org/">Kotlin</a>. Notez comment
+                    Enfin, je suis retourné au mobile natif avec java qui se fait progressivement "remplacer" par <a
+                        href="https://kotlinlang.org/">Kotlin</a>. Notez comment
                     j'ai jamais touché à IOS avec son <a href="https://www.swift.org/">Swift</a>, son
-                    <a href="https://en.wikipedia.org/wiki/Objective-C">objective-c</a> et toutes leurs autres choses payantes là.
+                    <a href="https://en.wikipedia.org/wiki/Objective-C">objective-c</a> et toutes leurs autres choses
+                    payantes là.
                     Par contre j'ai aussi touché au <a href="https://fr.wikipedia.org/wiki/C_sharp">C#</a>
                     pour des projets mini-jeux vidéos. Je compte apprendre un peu de <a href="https://go.dev/">Go</a>
-                    aussi. </br> Actuellement je m'intéressse particulièrement au développement web moderne avec divers frameworks
+                    aussi. </br> Actuellement je m'intéressse particulièrement au développement web moderne avec divers
+                    frameworks
                     javascript (<a href="https://fr.reactjs.org/">React</a>, <a href="https://angular.io/">Angular</a>,
                     <a href="https://vuejs.org/">Vue</a>) mais surtout le développement cross-platform avec comme favori
-                    <a href="https://flutter.dev/">Flutter</a>. L'idée d'une seule base de code pour plusieurs plateformes me plait beaucoup, 
+                    <a href="https://flutter.dev/">Flutter</a>. L'idée d'une seule base de code pour plusieurs
+                    plateformes me plait beaucoup,
                     même si certains évoquent la faible
-                    performance. Bon, On retient clairement que j'ai pas de préférence réelle pour un langage mais je pense avoir
+                    performance. Bon, On retient clairement que j'ai pas de préférence réelle pour un langage mais je
+                    pense avoir
                     dégagé quelques favoris.
                 </p>
 
@@ -251,9 +224,12 @@
                 <p class="lead text-white text-center mb-0">
                     Quand je ne bosse pas je joue à des jeux vidéo. j'ai grandi à l'époque de la
                     <a href="https://fr.wikipedia.org/wiki/Nintendo_Entertainment_System">NES et de la SNES</a> (super
-                    mario bros, donkey-kong, castlevania, ninja gaiden, contra, bomberman, ice climbers, duck hunt, pacman, tetris...).
-                    A l'époque c'était distribué sur des disques VCD compatibles avec 300 jeux (games 300). J'y jouais avec mon père, qui éclatait quand
-                    même bien mes scores. Franchement je pense que je pourrai jamais citer tous les jeux auquels j'ai joué à l'époque.
+                    mario bros, donkey-kong, castlevania, ninja gaiden, contra, bomberman, ice climbers, duck hunt,
+                    pacman, tetris...).
+                    A l'époque c'était distribué sur des disques VCD compatibles avec 300 jeux (games 300). J'y jouais
+                    avec mon père, qui éclatait quand
+                    même bien mes scores. Franchement je pense que je pourrai jamais citer tous les jeux auquels j'ai
+                    joué à l'époque.
                 </p>
 
                 <div class="fav-container img-fluid">
@@ -353,19 +329,21 @@
                     <br>
                     Je vais terminer en me faisant le maximum d'ennemis possibles, en donnant mon opinion:
 
-                    <ul class="lead mx-auto w-50">
-                        <li>android > apple</li>
-                        <li>linux > windows</li>
-                        <li>coca > pepsi</li>
-                        <li>rouge > bleu</li>
-                        <li>anime > manga</li>
-                        <li>frittes > alloco (tuez moi)</li>
-                    </ul>
+                <ul class="lead mx-auto w-50">
+                    <li>android > apple</li>
+                    <li>linux > windows</li>
+                    <li>coca > pepsi</li>
+                    <li>rouge > bleu</li>
+                    <li>anime > manga</li>
+                    <li>frittes > alloco (tuez moi)</li>
+                </ul>
 
-                    On dit pain-au-chocolat et non chocolatine, Le lait avant les céréales, certainement l'oeuf avant la poule, messi et christiano
-                    c'est pareil pour moi...
-                    <br>
-                    Bon c'est certain que je vais modifier cette page plus tard. J'ai plein de trucs à détailler et à ajouter (films, series, comics...) mais pour le moment, grosse flemme.
+                On dit pain-au-chocolat et non chocolatine, Le lait avant les céréales, certainement l'oeuf avant la
+                poule, messi et christiano
+                c'est pareil pour moi...
+                <br>
+                Bon c'est certain que je vais modifier cette page plus tard. J'ai plein de trucs à détailler et à
+                ajouter (films, series, comics...) mais pour le moment, grosse flemme.
 
                 </p>
 
