--- a/pages/lol-fanzone.html
+++ b/pages/lol-fanzone.html
@@ -2,36 +2,12 @@
 <html lang="fr">
 
 <head>
-    <!-- OpenReplay Tracking Code for nair0lf32.github.io -->
-    <script>
-        var initOpts = {
-            projectKey: "6442744483684795",
-            defaultInputMode: 0,
-            obscureTextNumbers: false,
-            obscureTextEmails: true,
-        };
-        var startOpts = { userID: "" };
-        (function (A, s, a, y, e, r) {
-            r = window.OpenReplay = [e, r, y, [s - 1, e]];
-            s = document.createElement('script'); s.src = A; s.async = !a;
-            document.getElementsByTagName('head')[0].appendChild(s);
-            r.start = function (v) { r.push([0]) };
-            r.stop = function (v) { r.push([1]) };
-            r.setUserID = function (id) { r.push([2, id]) };
-            r.setUserAnonymousID = function (id) { r.push([3, id]) };
-            r.setMetadata = function (k, v) { r.push([4, k, v]) };
-            r.event = function (k, p, i) { r.push([5, k, p, i]) };
-            r.issue = function (k, p) { r.push([6, k, p]) };
-            r.isActive = function () { return false };
-            r.getSessionToken = function () { };
-        })("//static.openreplay.com/latest/openreplay.js", 1, 0, initOpts, startOpts);
-    </script>
     <!--Meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Personal github page of EDEMESSI 'nairolf32' Florian" />
     <meta name="author" content="EDEMESSI Florian" />
-    <meta name="keywords" content="EDEMESSI,Florian,nairolf32,nair0lf32,github-page,personnal">
+    <meta name="keywords" content="EDEMESSI, Florian, nairolf32, nair0lf32, edemessi florian">
     <title>EDEMESSI Florian nair0lf32</title>
     <!-- Open Graph -->
     <meta property="og:title" content="EDEMESSI Florian nair0lf32" />
@@ -48,7 +24,7 @@
     <meta name="twitter:description" property="og:description" itemprop="description"
         content="Personal github page of EDEMESSI 'nairolf32' Florian">
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <!-- JQuery My boy :) -->
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -69,25 +45,15 @@
         type="text/css" />
     <link defer href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link defer href="css/styles.css" rel="stylesheet" />
-    <link defer href="css/animations.css" rel="stylesheet" />
-    <script defer src="js/scripts.js"></script>
-    <!-- Metype.com scripts -->
-    <script defer type='text/javascript'>
-        window.talktype = window.talktype || function (f) {
-            if (talktype.loaded)
-                f();
-            else
-                (talktype.q = talktype.q || []).push(arguments);
-        };
-    </script>
-    <script defer src='https://www.metype.com/quintype-metype/assets/metype.js'></script>
+    <link defer href="/css/styles.css" rel="stylesheet" />
+    <link defer href="/css/animations.css" rel="stylesheet" />
+    <script defer src="/js/scripts.js"></script>
 </head>
 
 
 <body id="page-top">
     <!-- For loading purposes-->
-    <div class="flex-fill loader img-hover-zoom"> <img class="img-hover-zoom" src="/assets/img/pacman.svg"
+    <div class="flex-fill loader img-hover-zoom"> <img class="img-hover-zoom" src="../assets/img/pacman.svg"
             alt="pac-man-spinner from loading.io">
         <p class="text-center text-white mb-0 loadtext">loading</p>
     </div>
@@ -107,7 +73,7 @@
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">A
                             propos</a></li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded"
-                            href="/favorites.html">
+                            href="/pages/favorites.html">
                             Favs</a></li>
                 </ul>
             </div>
@@ -187,7 +153,7 @@
     <section class="page-section bg-secondary text-white mb-0 lol-about img-fluid" id="about">
         <div class="container">
 
-            <img class="img-fluid" src="assets/img/lolpics/lol-logo.png" alt="EDEMESSI_FLorian_nairolf32" />
+            <img class="img-fluid" src="/assets/img/lolpics/lol-logo.png" alt="EDEMESSI_FLorian_nairolf32" />
 
             <!-- About Section Heading-->
             <h2 class="page-section-heading text-center text-uppercase text-white">A propos</h2>
