--- a/pages/lol-fanzone.html
+++ b/pages/lol-fanzone.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="EDEMESSI, Florian, nairolf32, nair0lf32, edemessi florian">
     <title>EDEMESSI Florian nair0lf32</title>
     <!-- Open Graph -->
-    <meta property="og:title" content="EDEMESSI Florian nair0lf32" />
+    <meta property="og:title" content="EDEMESSI Florian (nair0lf32)" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://nair0lf32.github.io/lol-fanzone/" />
     <meta property="og:description" content="Personal github page of EDEMESSI 'nairolf32' Florian">
@@ -20,7 +20,7 @@
     <!-- OG for twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:domain" content="http://nair0lf32.github.io/lol-fanzone">
-    <meta name="twitter:title" property="og:title" itemprop="name" content="EDEMESSI Florian nair0lf32">
+    <meta name="twitter:title" property="og:title" itemprop="name" content="EDEMESSI Florian (nair0lf32)">
     <meta name="twitter:description" property="og:description" itemprop="description"
         content="Personal github page of EDEMESSI 'nairolf32' Florian">
     <!-- Favicon-->
