--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <h1> Websites</h1>
     <p> Here you go!</p>
 
-    <img src="/assets/img/portfolio/self.png" alt="edemessi florian nairolf32 nair0lf32" style="border-radius: 50%;" />
+    <img width=300 height=300 src="/assets/img/portfolio/self.png" alt="edemessi florian nairolf32 nair0lf32"
+        style="border-radius: 50%;" />
 
     <ul>
         <li><a href="https://nair0lf32.github.io/website">website</a></li>
