--- a/index.html
+++ b/index.html
@@ -34,25 +34,33 @@
 
 
 <body>
+    <header>
+        <h1> Website index</h1>
+        <nav>
+            <ul>
+                <li>Dark</li>
+            </ul>
+        </nav>
+    </header>
 
-    <h1> Website index</h1>
-
-    <img class="logo" src="/assets/img/portfolio/self.png" alt="edemessi florian nairolf32 nair0lf32"
-        style="border-radius: 50%;" />
-
-    <p> Hi! I am EDEMESSI Florian (nair0lf32). Welcome to my Personal website!
-        <br> Actually, as a "web developper" wannabe, I am creating multiple websites (mostly personnal projects for
-        fun)
-        and hosting them on various platforms, mostly github pages. For the sake of content organization, I decided to
-        make
-        a website that links to my websites, and call it my main page, or my website index.
-        <br> This website is very simple and basic, with no heavy frameworks or anything...Just good old plain
-        html/css/javascript.
-        <br> You can follow any link below to see the garbage I have been creating over the web and spreading throughout
-        my
-        learning journey.
-
-    </p>
+    <div>
+        <img class="logo" src="/assets/img/portfolio/self.png" alt="edemessi florian nairolf32 nair0lf32"
+            style="border-radius: 50%;" />
+        <p class="about"> Hi! I am EDEMESSI Florian (nair0lf32). Welcome to my Personal website!
+            <br> Actually, as a "web developper" wannabe, I am creating multiple websites (mostly personnal projects for
+            fun)
+            and hosting them on various platforms, mostly github pages. For the sake of content organization, I decided
+            to
+            make
+            a website that links to my websites, and call it my main page, or my website index.
+            <br> This website is very simple and basic, with no heavy frameworks or anything...Just good old plain
+            html/css/javascript.
+            <br> You can follow any link below to see the garbage I have been creating over the web and spreading
+            throughout
+            my
+            learning journey.
+        </p>
+    </div>
 
     <ul>
         <li><a href="https://nair0lf32.github.io/website">website</a></li>
