--- a/index.html
+++ b/index.html
@@ -56,15 +56,18 @@
             <br> This website is very simple and basic, with no heavy frameworks or anything...Just good old plain
             html/css/javascript.
             <br> You can follow any link below to see the garbage I have been creating over the web and spreading
-            throughout
-            my
-            learning journey.
+            throughout my learning journey.
         </p>
     </div>
 
     <ul class="index" id="index">
-        <li><a href="https://nair0lf32.github.io/website">website</a></li>
-        <li><a href="https://florianedemessi.wordpress.com">wordpress</a></li>
+        <li> <a href="https://nair0lf32.github.io">index(root)</a></li>
+        <ul>
+            <li>
+                <a href="https://nair0lf32.github.io/website">my website</a>
+            </li>
+        </ul>
+        <li><a href="https://florianedemessi.wordpress.com">my wordpress page</a></li>
     </ul>
 
     <script type="text/javascript" src="/js/script.js"></script>
