--- a/index.html
+++ b/index.html
@@ -59,14 +59,27 @@
             throughout my learning journey.
         </p>
     </div>
-
+    <!-- On my github -->
     <ul class="index" id="index">
         <li> <a href="https://nair0lf32.github.io">index(root)</a></li>
         <ul>
+            <h2> Personals: </h2>
             <li>
                 <a href="https://nair0lf32.github.io/website">my website</a>
             </li>
+            <li>
+                <a href="https://nair0lf32.github.io/portfolio">my portfolio</a>
+            </li>
+            <li>
+                <a href="https://nair0lf32.github.io/zer0ne">zer0ne</a>
+            </li>
+
+            <h2> Fun/Random Projects: </h2>
+
+
         </ul>
+        <!-- Not hosted on my github -->
+        <h2> Externals: </h2>
         <li><a href="https://florianedemessi.wordpress.com">my wordpress page</a></li>
     </ul>
 
