--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
     <!-- Core style and script-->
     <link rel="stylesheet" href="css/style.css">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-30G2HTXJYB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-30G2HTXJYB');
+    </script>
+
 
 </head>
 
