--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
 
         gtag('config', 'G-30G2HTXJYB');
     </script>
-
-
 </head>
 
 
@@ -60,13 +58,13 @@
     <div>
         <img class="logo" src="/assets/img/portfolio/self.png" alt="edemessi florian nairolf32 nair0lf32" />
         <p class="about" id="about"> Hi! I am EDEMESSI Florian (nair0lf32). Welcome to my Personal website!
-            <br> Actually, as a "web developper" wannabe, I am creating multiple websites (mostly personnal projects for
-            fun) and hosting them on various platforms, mostly github pages. For the sake of content organization, I
-            decided to make a website that links to my websites, and call it my main page, or my website index.
-            <br> This website is very simple and basic, with no heavy frameworks or anything...Just good old plain
-            html/css/javascript.
-            <br> You can follow any link below to see the garbage I have been creating over the web and spreading
-            throughout my learning journey.
+            <br> As a "web developper", I create multiple websites (mostly personnal projects for
+            fun) and host them on various platforms, mostly github pages. For the sake of content organization, I
+            decided to make a website that links to my websites, and call it my main one.
+            <br> This website is very simple and basic, with no heavy fancy frameworks or glittery effects...Just good
+            old plain html/css/javascript.
+            <br> You can get all that in the other "web apps" I am creating and all the trash I have been spreading
+            throughout my learning journey.Just follow the links.
         </p>
     </div>
     <!-- On my github -->
